<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_layout"
    tools:context=".MainActivity">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bread_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <RadioGroup
        android:id="@+id/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/radio_baguette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingBottom="@dimen/padding_bottom"
            android:text="@string/baguette"/>


        <RadioButton
            android:id="@+id/radio_bgel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingBottom="@dimen/padding_bottom"
            android:text="@string/bagel"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="@dimen/padding_layout"/>

    <CheckBox
        android:id="@+id/check_ham"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/ham"/>


    <CheckBox
        android:id="@+id/check_cheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/cheese"/>



    <Switch
        android:id="@+id/switch_toasted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingBottom="@dimen/padding_layout"
        android:paddingTop="@dimen/padding_layout"
        android:text="@string/toasted"/>

    <Switch
        android:id="@+id/switch_salt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingBottom="@dimen/padding_bottom"
        android:text="@string/salt"
        android:paddingTop="@dimen/padding_layout"/>


    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minWidth="@dimen/min_dp"
            android:padding="@dimen/padding_layout"
            android:text="@string/ok"
            android:textColor="@color/colorAccent"
            android:onClick="actionOkClicked"/>


        <TextView
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/action_ok"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:minWidth="@dimen/min_dp"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/text_view_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_layout"
        android:textAppearance="?android:attr/textAppearanceMedium"/>



</LinearLayout>
